exports[`test should output one file per locale if a *directory* is set 1`] = `
Object {
  "App.Creator": "建立者（簡中）",
  "NotFound.Creator": "建立者（簡中）",
}
`;

exports[`test should output one file per locale if a *directory* is set 2`] = `
Object {
  "App.Creator": "建立者",
  "NotFound.Creator": "建立者",
}
`;

exports[`test should output one merged file if a *json file* is set 1`] = `
Object {
  "zh-CN": Object {
    "App.Creator": "建立者（簡中）",
    "NotFound.Creator": "建立者（簡中）",
  },
  "zh-TW": Object {
    "App.Creator": "建立者",
    "NotFound.Creator": "建立者",
  },
}
`;
